--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,28 @@ main {
   opacity: 1; /* 투명도 변화 */
 }
 
+.move-btn.reverse {
+    all: unset; 
+    position: absolute;
+    right: 11px;
+    transform: translateY(-50%) translateX(10px);
+    top: 50%;
+    background: none; 
+    border: none; 
+    padding: 0; 
+    cursor: pointer; 
+    font-size: 24px; 
+    letter-spacing: -6px;
+    color: #0090fe;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); /* 텍스트에 그림자 추가 */
+    transition: transform 0.3s ease, right 0.3s ease, color 0.3s ease;
+}
+
+.move-btn.reverse:hover {
+    transform: translateY(-50%);
+    right: 17px; /* 왼쪽으로 밀기 */
+}
+
 
 /* 메인 태스크 박스 */
 .maintaskContainer {
