feat: user이미지 다크모드 추가

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -18,6 +18,12 @@ body.dark-mode {
   color: #ffffff; /* 타이틀도 흰색으로 */
 }
 
+/* 다크모드에서 흰색으로 바꾸기 */
+.dark-mode .userIcon {
+  filter: invert(1);
+}
+
+
 /* -------------------- 메인 레이아웃 -------------------- */
 /* -------------------- 백로그 영역 -------------------- */
 .dark-mode .backLog {
